Prevent password overlay overlap.

--- a/resources/assets/scss/_components/_password-visibility.scss
+++ b/resources/assets/scss/_components/_password-visibility.scss
@@ -1,6 +1,11 @@
 .password-visibility {
   position: relative;
 
+  .text-field {
+    // Prevent browser overlay from overlapping on ours.
+    padding-right: 36px;
+  }
+
   .password-visibility__toggle {
     width: 1em;
     height: 1em;
